# Lan-House

./: .gitignore  Adrenalina.slnx  README.md  Script.txt  pyproject.toml
admin/: __init__.py  server.py
admin/web/: app.js  index.html  styles.css
backend/: __init__.py
backend/app/: __init__.py  main.py
client/: __init__.py
client/agent/: __init__.py  runtime.py
client/web/: index.html  styles.css
docs/: admin-client-shared-structure.md
scripts/: install-client.ps1  uninstall-client.ps1
shared/: __init__.py
shared/domain/: __init__.py  models.py
shared/services/: __init__.py  backup_policy.py  report_service.py  session_policy.py
src/Adrenalina.Admin/: AdminDesktopOptions.cs  AdminDesktopOptionsStore.cs  AdminExitDialog.cs  AdminNetworkLocator.cs  AdminPortResolver.cs  AdminSettingsDialog.cs  AdminSingleInstanceGuard.cs  AdminTutorialForm.cs  Adrenalina.Admin.csproj  EmbeddedAdminServer.cs  MainForm.cs  Program.cs
src/Adrenalina.Application/: Adrenalina.Application.csproj  AdrenalinaPaths.cs  Contracts.cs
src/Adrenalina.Client/: Adrenalina.Client.csproj  App.xaml  App.xaml.cs  ClientConnectionOptions.cs  ClientHostFactory.cs  ClientOptionsStore.cs  ClientServerGateway.cs  ClientServiceWorker.cs  ClientSyncWorker.cs  ClientWatchdogRunner.cs  MainWindow.xaml  MainWindow.xaml.cs  NativeMethods.cs  SingleInstanceGuard.cs  WindowsKioskManager.cs
src/Adrenalina.ClientAgent/: Adrenalina.ClientAgent.csproj  Program.cs  (+2 more)
tests/: test_client_runtime.py  test_compat_imports.py  test_offline_queue.py  test_report_service.py  test_session_service.py
(+56 files in other folders)
