[project]
name = "lan-house-manager"
version = "0.1.0"
description = "Base do sistema de gerenciamento de lan house com suporte offline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn>=0.34,<1.0",
  "pydantic>=2.10,<3.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["backend"]
